@@ -587,7 +587,7 @@ STR_1199    :{COMMA16} person on ride
 STR_1200    :{COMMA16} people on ride
 STR_1201    :Nobody in queue line
 STR_1202    :1 person in queue line
-STR_1203    :{COMMA16} people in queue line
+STR_1203    :{COMMA32} people in queue line
 STR_1204    :{COMMA16} minute queue time
 STR_1205    :{COMMA16} minutes queue time
 STR_1206    :{WINDOW_COLOUR_2}Wait for:
@@ -3676,6 +3676,8 @@ STR_6484    :See-Through vegetation toggle
 STR_6485    :See-Through vehicles toggle
 STR_6486    :See-Through guests toggle
 STR_6487    :See-Through staff toggle
+STR_6488    :Remove queue line cap
+STR_6489    :This cheat removes the normal cap of 1000 peeps on ride queue lines
 
 #############
 # Scenarios #
