@@ -1948,7 +1948,7 @@ bool Guest::ShouldGoOnRide(Ride* ride, StationIndex entranceNum, bool atQueue, b
         {
             auto& station = ride->GetStation(entranceNum);
             // Peeps won't join a queue that has 1000 peeps already in it.
-            if (station.QueueLength >= 1000)
+            if (station.QueueLength >= MAX_RIDE_QUEUE_LENGTH && !gCheatsNoCapOnQueueLength)
             {
                 peep_tried_to_enter_full_queue(this, ride);
                 return false;
